# sw-engineering-challenge

./: pyproject.toml
src/: main.py
src/entity/: bloq.py  locker.py  rent.py
src/exceptions/: bloq_exceptions.py  locker_exceptions.py  rent_exceptions.py
src/interface/: bloq_interface.py  locker_interface.py  rent_interface.py
src/persistence/: postgres_config.py
src/persistence/models/: bloq_model.py  locker_model.py  rent_model.py
src/persistence/repository/: bloq.py  bloq_repository.py  locker_repository.py  rent_repository.py
src/router/: bloq_router.py  dependencies.py  locker_router.py  rent_router.py
src/usecase/: bloq_usecase.py  locker_usecase.py  rent_usecase.py
tests/unit/: test_bloq.py  test_locker.py  test_rent.py
