[tool.poetry]
name = "sw-engineering-challenge"
version = "0.1.0"
description = ""
authors = ["anacrb <anacrb94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
